fix thema,skillwrap css / add wrap scrollbar css

--- a/firstPage.css
+++ b/firstPage.css
@@ -507,7 +507,12 @@
     text-shadow: 1px 1px 5px black;
 }
 
-@media (max-width: 767px){  /*모바일*/
+@media (max-width: 991px){  /*모바일*/
+    @keyframes slideSkill {
+        0%{left: 0px;}
+        100%{left:-692%}
+    }
+
     #secondSection1Wrap {
         margin-top: 50px;
         height: auto;
@@ -583,7 +588,10 @@
     }
 }
 @media (min-width: 768px) and (max-width: 991px) {  /* 테블릿 세로 */
-
+    @keyframes slideSkill {
+        0%{left: 0px;}
+        100%{left:-312%}
+    }
 }
 @media (min-width: 992px) and (max-width: 1199px) { /* 테블릿 가로 */
 
